--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 
 body  {
-  background-color: grey;
+  font-family: 'Open Sans';
 }
 ul, li {
   display: block;
@@ -21,12 +21,83 @@ ul, li {
 }
 
 .menu__item a{
-  font-family: 'Open Sans Semibold';
   font-size: 20px;
   color: #212121;
+  font-family: 'Open Sans Semibold';
 }
 
 .menu__item a:hover {
   text-decoration: none;
   color: #868686;
 }
+
+/*Шапка*/
+
+.header>div {
+  background-image: url(../img/header.png);
+  padding: 180px 0;
+  text-align: center;
+  color: #fff;
+  background-size: cover;
+  background-position: 0 100%;
+}
+
+.header__title {
+  font-size: 55px;
+}
+
+.header__text {
+  font-size: 20px;
+  margin-bottom: 100px;
+}
+
+.button {
+  padding: 10px 25px;
+  margin: 0 10px;
+  color: #fff;
+  transition: 0.3s;
+  }
+
+  .button_empty {
+    background: transparent;
+    border: 2px solid white;
+  }
+
+  .button_full {
+    background: #00897b;
+    border: 2px solid #00897b;
+  }
+
+  .button_empty:hover,
+  .button_full:hover {
+    border: 2px dotted white;
+    background: #04574e;
+  }
+
+  /*О нас*/
+
+  .about {
+    color: black;
+    background: white;
+    text-align: center;
+    padding-top: 120px;
+    padding-bottom: 125px;
+  }
+
+  .about__title {
+    font-size: 30px;
+    font-weight: bold;
+  }
+
+  .about_text {
+    color: #212121;
+    font-size: 15px;
+    margin-bottom: 110px;
+  }
+
+  .about_h3 {
+    font-size: 20px;
+    font-family: 'Open Sans Semibold';
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
